added profile page, rolled abck to mainheader nav

--- a/dexam/src/app/views/landing/components/header/header.component.html
+++ b/dexam/src/app/views/landing/components/header/header.component.html
@@ -73,6 +73,9 @@
                 <li (click)="hidemenu()" class="nav-item">
                     <a href="#" scrollTo="pricing-wrap" class="nav-link m-2 menu-item">Pricing</a>
                 </li>
+                <li (click)="hidemenu()" class="nav-item">
+                    <a href="#" scrollTo="pricing-wrap" class="nav-link m-2 menu-item">Pricing</a>
+                </li>
 
 
 
