add accept and decline

--- a/dexam/src/app/views/landing/landing-v9/landing-v9.component.html
+++ b/dexam/src/app/views/landing/landing-v9/landing-v9.component.html
@@ -6,7 +6,7 @@
 <!--    <app-mega-menu></app-mega-menu>-->
 
 <!--    <app-intro2></app-intro2>-->
-    <app-opportunity></app-opportunity>
+<!--    <app-opportunity></app-opportunity>-->
 
 <!--    <app-student-list></app-student-list>-->
 <!--    <app-schedule-list></app-schedule-list>-->
