--- a/dexam/src/app/views/landing/components/expandabletable/expandabletable.component.scss
+++ b/dexam/src/app/views/landing/components/expandabletable/expandabletable.component.scss
@@ -1,14 +1,14 @@
 table {
-  width: 60%;
-  margin-right: 20%;
-  margin-left: 20%;
+  width: 100%;
+  //margin-right: 20%;
+  //margin-left: 20%;
 }
 
 .mat-form-field {
   font-size: 14px;
   width: 60%;
-  margin-right: 20%;
-  margin-left: 20%;
+  //margin-right: 20%;
+  //margin-left: 20%;
 }
 
 tr.example-detail-row {
@@ -28,17 +28,18 @@ tr.example-element-row:not(.example-expanded-row):active {
 }
 
 .example-element-detail {
-  //overflow: hidden;
+  overflow: hidden;
   display: flex;
 }
 
 .example-element-diagram {
   min-width: 80px;
-  border: 2px solid black;
+  max-width: 80px;
+  //border: 2px solid black;
   padding: 8px;
   font-weight: lighter;
   margin: 8px 0;
-  height: 104px;
+  //height: 104px;
 }
 
 .example-element-symbol {
@@ -54,8 +55,34 @@ tr.example-element-row:not(.example-expanded-row):active {
 .example-element-description-attribution {
   opacity: 0.5;
 }
+//
+//.addheight{
+//  height: 500px;
+//}
 
-.addheight{
-  height: 500px;
+.caret{
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: 2px;
+  vertical-align: middle;
+  border-top: 4px dashed;
+  border-top: 4px solid\9;
+  border-right: 4px solid transparent;
+  border-left: 4px solid transparent;
 }
 
+.customers {
+  //font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  //width: 100%;
+  margin-top: 100px;
+}
+
+.customers th {
+  //padding-top: 12px;
+  //padding-bottom: 12px;
+  text-align: left;
+  background-color: #003473;
+  color: white;
+}
