--- a/dexam/src/app/views/landing/pages/userprofilepage/userprofilepage.component.html
+++ b/dexam/src/app/views/landing/pages/userprofilepage/userprofilepage.component.html
@@ -6,7 +6,7 @@
       Tip 1: You can change the color of the sidebar using: data-color="blue | green | orange | red | yellow"
   -->
     <div class="logo">
-      <a href="http://www.creative-tim.com" class="simple-text logo-mini">
+      <a href="v9" class="simple-text logo-mini">
         <div class="logo-image-small">
           <img src="assets/images/landing/profilepic.jpg">
         </div>
