--- a/dexam/src/app/views/landing/components/expandabletable/expandabletable.component.html
+++ b/dexam/src/app/views/landing/components/expandabletable/expandabletable.component.html
@@ -1,8 +1,7 @@
 
 <div class="mat-elevation-z8">
 <table class="customers" mat-table
-       [dataSource]="dataSource" multiTemplateDataRows
-       >
+       [dataSource]="dataSource" multiTemplateDataRows matSort>
 <!--  <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">-->
 <!--    <th mat-header-cell *matHeaderCellDef> {{column}} </th>-->
 <!--    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>-->
@@ -10,31 +9,31 @@
 
   <!-- ID Column -->
   <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> id </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> id </th>
     <td mat-cell *matCellDef="let row"> {{row.id}} </td>
   </ng-container>
 
   <!-- Progress Column -->
   <ng-container matColumnDef="type">
-    <th mat-header-cell *matHeaderCellDef> Type </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
     <td mat-cell *matCellDef="let row"> {{row.type}}% </td>
   </ng-container>
 
   <!-- Name Column -->
   <ng-container matColumnDef="duration">
-    <th mat-header-cell *matHeaderCellDef> Duration </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration </th>
     <td mat-cell *matCellDef="let row"> {{row.duration}} </td>
   </ng-container>
 
   <!-- Color Column -->
   <ng-container matColumnDef="location">
-    <th mat-header-cell *matHeaderCellDef> duration </th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> duration </th>
     <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.location}} </td>
   </ng-container>
 
   <!-- Color Column -->
   <ng-container matColumnDef="details">
-    <th mat-header-cell *matHeaderCellDef> details  </th>
+    <th mat-header-cell *matHeaderCellDef> </th>
     <td mat-cell *matCellDef="let row" [style.color]="row.color"> <p>view details</p> </td>
   </ng-container>
   <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
