callbox under mega-menu

--- a/dexam/src/app/views/landing/components/callusbox/callusbox.component.html
+++ b/dexam/src/app/views/landing/components/callusbox/callusbox.component.html
@@ -3,7 +3,7 @@
 <!--  <div class="container top-bar">-->
 
 
-<p>call now</p>
+<p >Call now to set up tutoring: (862) 505-0706</p>
 <!--  </div>-->
 </div>
 <!--<div class="tob-bar header-fixed"><p>-->
