--- a/dexam/src/app/views/landing/landing-v9/landing-v9.component.html
+++ b/dexam/src/app/views/landing/landing-v9/landing-v9.component.html
@@ -1,18 +1,23 @@
 <div class="landing_wrap" [ngClass]="[backgroundColor]">
 
-    <app-header>
-    </app-header>
+<!--    <app-header>-->
+<!--    </app-header>-->
+    <app-mega-menu></app-mega-menu>
+<!--<app-callusbox></app-callusbox>-->
+<!--    <app-side-nav></app-side-nav>-->
+    <app-spinner></app-spinner>
+<!--    <app-schedule-list></app-schedule-list>-->
 <!--    <app-opportunities></app-opportunities>-->
 <!--    <app-userprofilepage></app-userprofilepage>-->
 <!--    <app-mega-menu></app-mega-menu>-->
 
 <!--    <app-intro2></app-intro2>-->
-    <app-opportunity></app-opportunity>
+<!--    <app-opportunity></app-opportunity>-->
 
 <!--    <app-student-list></app-student-list>-->
 <!--    <app-schedule-list></app-schedule-list>-->
-    <app-expandabletable></app-expandabletable>
-    <app-sort-paginate-table></app-sort-paginate-table>
+<!--    <app-expandabletable></app-expandabletable>-->
+<!--    <app-sort-paginate-table></app-sort-paginate-table>-->
 <!--    <app-features></app-features>-->
     <app-services></app-services>
     <app-works-carousel></app-works-carousel>
