--- a/dexam/src/app/views/landing/components/callusbox/callusbox.component.scss
+++ b/dexam/src/app/views/landing/components/callusbox/callusbox.component.scss
@@ -1,4 +1,14 @@
-
+.header-fixed {
+  position: fixed !important;
+  left: 0;
+  right: 0;
+  top: 0;
+  padding: 0 !important;
+  z-index: 99999;
+  //box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
+  //animation: .6s slideDown forwards;
+  transition: all .5s ease-in-out !important;
+}
 .top-bar {
   //position: fixed;
   //margin-right: calc(-50vw + 50%);
