--- a/dexam/src/app/views/landing/components/mega-menu/mega-menu.component.scss
+++ b/dexam/src/app/views/landing/components/mega-menu/mega-menu.component.scss
@@ -1,379 +1,146 @@
-* {
-  box-sizing: border-box;
+.bg-blue1{
+  background-color: #1aae6f;
 }
-
-body {
-  margin: 0;
-}
-
-.navbars {
-  overflow: hidden;
-  background-color: #09366e;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.navbars a {
-  float: left;
-  font-size: 16px;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-.dropdowns {
-  float: left;
-  overflow: hidden;
-}
-
-.dropdowns .dropbtns {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: red;
-  padding: 14px 16px;
-  background-color: inherit;
-  font: inherit;
-  margin: 0;
-}
-
-.navbars a:hover, .dropdowns:hover .dropbtns {
-  background-color: white;
-}
-
-.dropdown-contents {
-  display: none;
-  position: absolute;
-  background-color: #ffffff;
-  width: 60%;
+.header-fixed {
+  position: fixed !important;
   left: 0;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  //z-index: 9999;
+  right: 0;
+  top: 0;
+  //padding: 0 !important;
+  z-index: 99999;
+  -webkit-font-smoothing: antialiased;
+
+  //box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
+  //animation: .6s slideDown forwards;
+  //transition: all .5s ease-in-out !important;
+  //margin-bottom: 150px !important;
+}
+.header-fixed {
+  position: fixed !important;
+  left: 0;
+  right: 0;
+  top: 0;
+  //padding: 0 !important;
+  z-index: 99999;
+  -webkit-font-smoothing: antialiased;
+
+  //box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
+  //animation: .6s slideDown forwards;
+  //transition: all .5s ease-in-out !important;
+  //margin-bottom: 150px !important;
+}
+.link-width{
+  width: 60%;
+  margin: auto;
+  white-space: nowrap;
+
+}
+.dropdown-width{
+  width: 60% !important;
+  //margin: auto !important;
   margin-left: 20%;
   margin-right: 20%;
-  border-bottom-left-radius: 2%;
-  border-bottom-right-radius: 2%;
-  //mso-border-shadow: yes;
-  //box-shadow: #0C0C3C;
-  //border-radius: 100px;
+  background-color: #ffffff !important;
+  border: #212529;
+  color: #454d55 !important;
+  border-bottom-right-radius: 1% !important;
+  border-bottom-left-radius: 1% !important;
+  z-index: 99998;
 }
-
-.dropdown-contents .headers {
-  background: #000101;
-  padding: 16px;
-  color: white;
+.menu-spacing {
+  padding-right: 20px;
 }
-
-.dropdowns:hover .dropdown-contents {
-  display: block;
-}
-
-/* Create three equal columns that floats next to each other */
-.columns {
-  float: left;
-  width: 14%;
-  padding: 10px;
-  background-color: #fcfcfc;
-  height: 250px;
-}
-
-.columns a {
-  float: none;
-  color: black;
-  padding: 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-.columns-double a {
-  float: none;
-  color: black;
-  padding: 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.columns a:hover {
-  background-color: #ddd;
-}
-
-.columns-double {
-  float: left;
-  width: 30%;
-  padding: 10px;
-  background-color: #fcfcfc;
-  height: 250px;
-}
-.inner-container{
-   float: right;
- }
-
-.logo-container{
-  float: left;
-}
-/* Clear floats after the columns */
-.rows:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-  .columns {
-    width: 100%;
-    height: auto;
-  }
-}
-
-#home-header {
+//.navbar .mega-dropdown {
+//  position: static !important;
+//}
+//
+//.navbar .dropdown-menu.mega-menu {
+//  width: 100%;
+//  border: none;
+//  border-radius: 0;
+//}
+//
+//.navbar .dropdown-menu.mega-menu a {
+//  padding: 0 0 0 0;
+//}
+//
+//.navbar .dropdown-menu.mega-menu a.news-title-2 {
+//  font-weight: 500;
+//  font-size: 1.1rem;
+//  line-height: 1.5;
+//  -webkit-transition: .2s;
+//  transition: .2s;
+//  color: #fff !important;
+//}
+//
+//.navbar .dropdown-menu.mega-menu a.news-title-2:hover {
+//  color: #d0d6e2 !important;
+//}
+//
+//.navbar .dropdown-menu.mega-menu .sub-menu a.menu-item-2 {
+//  color: #fff !important;
+//}
+//
+//.navbar .dropdown-menu a {
+//  color: #fff !important;
+//}
+//
+//.navbar .dropdown-menu.mega-menu .sub-menu a.menu-item-2:hover {
+//  color: #fff !important;
+//}
+//
+//.navbar .dropdown-menu.mega-menu .sub-title {
+//  padding-bottom: 0.5rem;
+//  margin-bottom: 1rem;
+//  border-bottom: 1px solid #e0e0e0;
+//}
+//
+//.navbar .dropdown-menu.mega-menu .mt-sm {
+//  margin-top: -3px;
+//}
+//
+//.navbar .dropdown-menu.mega-menu .font-small {
+//  font-size: 0.85rem;
+//}
+.top-bar1 {
   //position: fixed;
+  //margin-right: calc(-50vw + 50%);
+  //margin-left: calc(-50vw + 50%);
+  //margin-top: 50px;
+  //max-width: 100vw;
+  //////////////////
+  //height: auto;
+  //background: #fff;
+  //text-align: center !important;
+  //color: #e97d23;
+  //padding: 0 !important;
+  //z-index: 9999;
+  //margin-bottom: 100px;
+  /////////////////
+  margin-right: calc(-50vw + 50%);
+  margin-left: calc(-50vw + 50%);
+  max-width: 100vw;
+  height: 3.75rem;
+  background: #901a1a;
+  text-align: center;
+
+}
+.site-header__inner {
+  position: relative;
   width: 100%;
-  background: transparent;
-  //background-color: #09366e;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding: 22px 0;
-  transition: all .5s ease-in-out;
-  -webkit-transition: all .5s ease-in-out;
-  z-index: 9999;
-  //margin-bottom:1.5em;
+  max-width: 1050px;
+  padding: 0 10px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  z-index: 10;
 }
 
-a {
-  color: #fff;
-  text-decoration: none;
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
+.site-nav {
+  background: #153154;
+  position: static;
+  overflow-x: visible;
+  overflow-y: visible;
+  width: 100%;
+  transform: none;
+  transition: none;
 }
-
-.mobile_menu {
-  height: 60px;
-  align-items: center;
-}
-
-#home-header>.container {
-  height: auto;
-}
-
-.hometop-btn:hover ::ng-deep .mat-button-focus-overlay {
-  display: none;
-}
-
-#home-header:not(.header-fixed) .hometop-btn ::ng-deep .mat-button-ripple {
-  top: -22px;
-  bottom: -22px;
-}
-
-.header-fixed {
-  //position: fixed !important;
-  left: 0;
-  right: 0;
-  top: 0;
-  padding: 0 !important;
-  box-shadow: 0 0 4px rgba(0, 0, 0, .14), 0 4px 8px rgba(0, 0, 0, .28);
-  animation: .6s slideDown forwards;
-  transition: all .5s ease-in-out !important;
-}
-
-.header-fixed .container {
-  //height: 60px !important;
-}
-
-.header-fixed .hometop-btn {
-  line-height: 60px !important;
-}
-
-.home-logo {
-  display: flex;
-  align-items: center;
-  a {
-    display: inherit;
-  }
-}
-
-#menu-toggle {
-  display: none;
-  position: absolute;
-  right: 5px;
-  top: 10px;
-}
-
-.icon-button {
-  .mat-icon {
-    font-size: 20px;
-  }
-}
-
-// dropdown menu
-nav {
-  ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    position: relative;
-    //background-color: #09366e;
-    li {
-      display: inline-block;
-      a {
-        display: block;
-        color: #fff;
-        cursor: pointer;
-      }
-      ul {
-        text-align: left;
-        li {
-          box-shadow: 0 1px 15px 1px rgba(0, 0, 0, 0.04), 0 1px 6px rgba(0, 0, 0, 0.04);
-          text-align: center;
-          padding: 10px;
-          cursor: pointer;
-          &:first-child {
-            border-top-right-radius: 10px;
-            border-top-left-radius: 10px;
-          }
-          &:last-child {
-            border-bottom-right-radius: 10px;
-            border-bottom-left-radius: 10px;
-          }
-          ul {
-            text-align: left;
-            background: transparent;
-          }
-        }
-      }
-    }
-  }
-}
-
-
-/* Hide Dropdowns by Default */
-
-nav ul ul {
-  position: absolute;
-  top: 50px;
-  opacity: 0;
-  visibility: hidden;
-  transform-origin: 0% 0%;
-  transition: transform 0.3s, opacity 0.3s;
-  transform-style: preserve-3d;
-  transform: rotateX(-75deg);
-  position: absolute;
-  top: 50px;
-  /* the height of the main nav */
-}
-
-
-/* Display Dropdowns on Hover */
-
-nav ul li:hover>ul {
-  opacity: 1;
-  visibility: visible;
-  transform: rotateX(0deg);
-}
-
-
-/* Fisrt Tier Dropdown */
-
-nav ul ul li {
-  width: 170px;
-  float: none;
-  display: list-item;
-  position: relative;
-}
-
-
-/* Second, Third and more Tiers	*/
-
-nav ul ul ul li {
-  position: relative;
-  top: -50px;
-  left: 145px;
-}
-
-
-/* Change this in order to change the Dropdown symbol */
-
-li>a:after {
-  content: ' ';
-}
-
-li>a:only-child:after {
-  content: '';
-}
-
-@media (max-width: 991px) {
-  #home-header {
-    padding: 0;
-  }
-  #home-header>.container {
-    //height: 60px;
-    padding: 0;
-  }
-  .menu-opened:host .header-mobile-top {
-    padding: 13px 0;
-  }
-  #menu-toggle {
-    display: block;
-  }
-  .menu-opened:host .container {
-    height: auto !important;
-  }
-  .home-logo {
-    margin-left: 15px;
-  }
-  .top-menu {
-    display: none !important;
-  }
-  .menu-opened:host .top-menu {
-    display: block !important;
-    width: 100% !important;
-    flex: none !important;
-    background: #f3f3f3;
-  }
-  .menu-opened:host .top-menu button {
-    display: block;
-    width: 100%;
-    line-height: 56px !important;
-  }
-  .navbar-collapse {
-    flex-basis: 100%;
-    flex-grow: 1;
-    align-items: center;
-    margin-top: 0px;
-    text-align: center;
-    height: 100vh;
-    overflow-y: scroll;
-  }
-  li.nav-item {
-    text-align: center;
-  }
-  nav ul ul {
-    display: none;
-    position: relative;
-    top: 10px;
-    /* the height of the main nav */
-  }
-  nav ul ul ul li {
-    position: relative;
-    top: 10px;
-    left: 5px;
-  }
-  nav ul li:hover>ul {
-    display: inline-block;
-  }
-}
-
-.navbar-toggler:hover,
-.navbar-toggler:focus {
-  text-decoration: none;
-  outline: none;
-}
-
-span.navbar-toggler-icon .eva {
-  -webkit-text-fill-color: #fff;
-}
-
-@media only screen and (max-width: 746px) {}
-
