--- a/dexam/src/app/views/landing/components/sort-paginate-table/sort-paginate-table.component.html
+++ b/dexam/src/app/views/landing/components/sort-paginate-table/sort-paginate-table.component.html
@@ -34,6 +34,12 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> duration </th>
       <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.location}} </td>
     </ng-container>
+
+      <ng-container matColumnDef="accept">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> accept </th>
+          <td mat-cell *matCellDef="let row" [style.color]="row.color"> <button type="button" class="btn btn-sm btn-success">Edit</button>
+              <button type="button" class="btn btn-sm btn-warning">Contact</button> </td>
+      </ng-container>
     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
     <ng-container matColumnDef="expandedDetail">
       <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
