--- a/dexam/src/app/views/landing/components/sort-paginate-table/sort-paginate-table.component.scss
+++ b/dexam/src/app/views/landing/components/sort-paginate-table/sort-paginate-table.component.scss
@@ -1,14 +1,14 @@
 table {
-  width: 60%;
-  margin-left: 20%;
-  margin-right: 20%;
+  width: 100%;
+  margin: auto;
 }
 
 .mat-form-field {
   font-size: 14px;
-  width: 60%;
-  margin-left: 20%;
-  margin-right: 20%;
+  width: 100%;
+  margin: auto;
+  //margin-left: 20%;
+  //margin-right: 20%;
 }
 
 td, th {
@@ -16,15 +16,13 @@ td, th {
 }
 
 table {
-  width: 60%;
-  margin-right: 20%;
-  margin-left: 20%;
+  width: 100%;
+  margin: auto;
 }
 
 .mat-paginator{
-  width: 60%;
-  margin-right: 20%;
-  margin-left: 20%;
+  width: 80%;
+  margin: auto;
 }
 
 .customers {
