--- a/dexam/src/app/views/landing/pages/opportunities/opportunities.component.html
+++ b/dexam/src/app/views/landing/pages/opportunities/opportunities.component.html
@@ -90,37 +90,42 @@
       <!-- Navigation -->
       <ul class="navbar-nav">
         <li class="nav-item active ">
-        <a class=" nav-link " href=" ../index.html"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
-        </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="../examples/icons.html">
-            <i class="ni ni-planet text-blue"></i> Icons
+          <a class=" nav-link " [routerLink]="['/landing/v9']"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="../examples/maps.html">
-            <i class="ni ni-pin-3 text-orange"></i> Maps
+          <a class="nav-link " [routerLink]="['/landing/schedule']">
+            <i class="ni ni-planet text-blue"></i> SCHEDULE
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="../examples/profile.html">
-            <i class="ni ni-single-02 text-yellow"></i> User profile
+          <a class="nav-link " [routerLink]="['/landing/opportunities']">
+            <i class="ni ni-pin-3 text-orange"></i> OPPORTUNITIES
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  active " href="../examples/tables.html">
-            <i class="ni ni-bullet-list-67 text-red"></i> Tables
+          <a class="nav-link " [routerLink]="['/landing/chat']">
+            <i class="ni ni-single-02 text-yellow"></i> MESSAGES
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../examples/login.html">
-            <i class="ni ni-key-25 text-info"></i> Login
+          <a class="nav-link  active " [routerLink]="['/landing/billing']">
+            <i class="ni ni-bullet-list-67 text-red"></i> BILLING
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../examples/register.html">
-            <i class="ni ni-circle-08 text-pink"></i> Register
+          <a class="nav-link" [routerLink]="['/landing/students']">
+            <i class="ni ni-key-25 text-info"></i> STUDENTS
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/landing/tutors']">
+            <i class="ni ni-circle-08 text-pink"></i> TUTORS
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/landing/profile']">
+            <i class="ni ni-key-25 text-info"></i> PROFILE
           </a>
         </li>
       </ul>
@@ -154,7 +159,8 @@
   <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
     <div class="container-fluid">
       <!-- Brand -->
-      <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="../index.html">OPPORTUNITIES</a>
+      <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="../index.html"> <i class="ni ni-money-coins"></i> OPPORTUNITIES
+      </a>
       <!-- Form -->
 <!--      <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">-->
 <!--        <div class="form-group mb-0">-->
@@ -211,7 +217,7 @@
   </nav>
   <!-- End Navbar -->
   <!-- Header -->
-  <div class="header bg-gradient-primary pb-8 pt-5 pt-md-8">
+  <div class="header bg-default pb-8 pt-5 pt-md-8">
     <div class="container-fluid">
       <div class="header-body">
         <!-- Card stats -->
@@ -310,11 +316,11 @@
       <div class="col">
         <div class="card shadow">
           <div class="card-header border-0">
-            <h3 class="mb-0">Open Opportunities</h3>
+<!--            <h5 class="mb-0">Open Opportunities</h5>-->
           </div>
           <div class="table-responsive">
             <table class="table align-items-center table-flush">
-              <thead class="thead-light">
+              <thead class="thead-dark-mine">
               <tr>
                 <th scope="col">Subject</th>
                 <th scope="col">Type</th>
@@ -358,8 +364,8 @@
 <!--                  </div>-->
 <!--                </td>-->
                 <td class="text-right">
-                  <button type="button" class="btn btn-success" data-toggle="modal" data-target="#Opportunity-modal">Accept</button>
-                  <button type="button" class="btn btn-warning">Decline</button>
+                  <button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#Opportunity-modal">Accept</button>
+                  <button type="button" class="btn btn-sm btn-warning">Decline</button>
 
                 </td>
                 <!-- Modal -->
