--- a/dexam/src/app/views/landing/pages/profile/profile.component.html
+++ b/dexam/src/app/views/landing/pages/profile/profile.component.html
@@ -89,38 +89,43 @@
       </form>
       <!-- Navigation -->
       <ul class="navbar-nav">
-        <li class="nav-item  active">
-        <a class=" nav-link " href=" ../index.html"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
-        </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="../examples/icons.html">
-            <i class="ni ni-planet text-blue"></i> Icons
+        <li class="nav-item active ">
+          <a class=" nav-link " [routerLink]="['/landing/v9']"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="../examples/maps.html">
-            <i class="ni ni-pin-3 text-orange"></i> Maps
+          <a class="nav-link " [routerLink]="['/landing/schedule']">
+            <i class="ni ni-planet text-blue"></i> SCHEDULE
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  active " href="../examples/profile.html">
-            <i class="ni ni-single-02 text-yellow"></i> User profile
+          <a class="nav-link " [routerLink]="['/landing/opportunities']">
+            <i class="ni ni-pin-3 text-orange"></i> OPPORTUNITIES
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="../examples/tables.html">
-            <i class="ni ni-bullet-list-67 text-red"></i> Tables
+          <a class="nav-link " [routerLink]="['/landing/chat']">
+            <i class="ni ni-single-02 text-yellow"></i> MESSAGES
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../examples/login.html">
-            <i class="ni ni-key-25 text-info"></i> Login
+          <a class="nav-link  active " [routerLink]="['/landing/billing']">
+            <i class="ni ni-bullet-list-67 text-red"></i> BILLING
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../examples/register.html">
-            <i class="ni ni-circle-08 text-pink"></i> Register
+          <a class="nav-link" [routerLink]="['/landing/students']">
+            <i class="ni ni-key-25 text-info"></i> STUDENTS
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/landing/tutors']">
+            <i class="ni ni-circle-08 text-pink"></i> TUTORS
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/landing/profile']">
+            <i class="ni ni-key-25 text-info"></i> PROFILE
           </a>
         </li>
       </ul>
