--- a/dexam/src/app/views/landing/pages/studentspage/studentspage.component.html
+++ b/dexam/src/app/views/landing/pages/studentspage/studentspage.component.html
@@ -90,37 +90,42 @@
       <!-- Navigation -->
       <ul class="navbar-nav">
         <li class="nav-item active ">
-          <a class=" nav-link " href=" ../index.html"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
+          <a class=" nav-link " [routerLink]="['/landing/v9']"> <i class="ni ni-tv-2 text-primary"></i> Dashboard
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="../examples/icons.html">
-            <i class="ni ni-planet text-blue"></i> Icons
+          <a class="nav-link " [routerLink]="['/landing/schedule']">
+            <i class="ni ni-planet text-blue"></i> SCHEDULE
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="../examples/maps.html">
-            <i class="ni ni-pin-3 text-orange"></i> Maps
+          <a class="nav-link " [routerLink]="['/landing/opportunities']">
+            <i class="ni ni-pin-3 text-orange"></i> OPPORTUNITIES
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="../examples/profile.html">
-            <i class="ni ni-single-02 text-yellow"></i> User profile
+          <a class="nav-link " [routerLink]="['/landing/chat']">
+            <i class="ni ni-single-02 text-yellow"></i> MESSAGES
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  active " href="../examples/tables.html">
-            <i class="ni ni-bullet-list-67 text-red"></i> Tables
+          <a class="nav-link  active " [routerLink]="['/landing/billing']">
+            <i class="ni ni-bullet-list-67 text-red"></i> BILLING
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../examples/login.html">
-            <i class="ni ni-key-25 text-info"></i> Login
+          <a class="nav-link" [routerLink]="['/landing/students']">
+            <i class="ni ni-key-25 text-info"></i> STUDENTS
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../examples/register.html">
-            <i class="ni ni-circle-08 text-pink"></i> Register
+          <a class="nav-link" [routerLink]="['/landing/tutors']">
+            <i class="ni ni-circle-08 text-pink"></i> TUTORS
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/landing/profile']">
+            <i class="ni ni-key-25 text-info"></i> PROFILE
           </a>
         </li>
       </ul>
@@ -154,7 +159,8 @@
   <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
     <div class="container-fluid">
       <!-- Brand -->
-      <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="../index.html">Tables</a>
+      <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" href="../index.html"> <i class="ni ni-single-02"></i> MY STUDENTS
+      </a>
       <!-- Form -->
       <form class="navbar-search navbar-search-dark form-inline mr-3 d-none d-md-flex ml-lg-auto">
         <div class="form-group mb-0">
@@ -211,96 +217,96 @@
   </nav>
   <!-- End Navbar -->
   <!-- Header -->
-  <div class="header bg-gradient-primary pb-8 pt-5 pt-md-8">
+  <div class="header bg-default pb-8 pt-5 pt-md-8">
     <div class="container-fluid">
       <div class="header-body">
         <!-- Card stats -->
-        <div class="row">
-          <div class="col-xl-3 col-lg-6">
-            <div class="card card-stats mb-4 mb-xl-0">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col">
-                    <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>
-                    <span class="h2 font-weight-bold mb-0">350,897</span>
-                  </div>
-                  <div class="col-auto">
-                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                      <i class="fas fa-chart-bar"></i>
-                    </div>
-                  </div>
-                </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                  <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                  <span class="text-nowrap">Since last month</span>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-3 col-lg-6">
-            <div class="card card-stats mb-4 mb-xl-0">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col">
-                    <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
-                    <span class="h2 font-weight-bold mb-0">2,356</span>
-                  </div>
-                  <div class="col-auto">
-                    <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                      <i class="fas fa-chart-pie"></i>
-                    </div>
-                  </div>
-                </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                  <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span>
-                  <span class="text-nowrap">Since last week</span>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-3 col-lg-6">
-            <div class="card card-stats mb-4 mb-xl-0">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col">
-                    <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
-                    <span class="h2 font-weight-bold mb-0">924</span>
-                  </div>
-                  <div class="col-auto">
-                    <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
-                      <i class="fas fa-users"></i>
-                    </div>
-                  </div>
-                </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                  <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>
-                  <span class="text-nowrap">Since yesterday</span>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-xl-3 col-lg-6">
-            <div class="card card-stats mb-4 mb-xl-0">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col">
-                    <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                    <span class="h2 font-weight-bold mb-0">49,65%</span>
-                  </div>
-                  <div class="col-auto">
-                    <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                      <i class="fas fa-percent"></i>
-                    </div>
-                  </div>
-                </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                  <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
-                  <span class="text-nowrap">Since last month</span>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+<!--        <div class="row">-->
+<!--          <div class="col-xl-3 col-lg-6">-->
+<!--            <div class="card card-stats mb-4 mb-xl-0">-->
+<!--              <div class="card-body">-->
+<!--                <div class="row">-->
+<!--                  <div class="col">-->
+<!--                    <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>-->
+<!--                    <span class="h2 font-weight-bold mb-0">350,897</span>-->
+<!--                  </div>-->
+<!--                  <div class="col-auto">-->
+<!--                    <div class="icon icon-shape bg-danger text-white rounded-circle shadow">-->
+<!--                      <i class="fas fa-chart-bar"></i>-->
+<!--                    </div>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--                <p class="mt-3 mb-0 text-muted text-sm">-->
+<!--                  <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>-->
+<!--                  <span class="text-nowrap">Since last month</span>-->
+<!--                </p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-xl-3 col-lg-6">-->
+<!--            <div class="card card-stats mb-4 mb-xl-0">-->
+<!--              <div class="card-body">-->
+<!--                <div class="row">-->
+<!--                  <div class="col">-->
+<!--                    <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>-->
+<!--                    <span class="h2 font-weight-bold mb-0">2,356</span>-->
+<!--                  </div>-->
+<!--                  <div class="col-auto">-->
+<!--                    <div class="icon icon-shape bg-warning text-white rounded-circle shadow">-->
+<!--                      <i class="fas fa-chart-pie"></i>-->
+<!--                    </div>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--                <p class="mt-3 mb-0 text-muted text-sm">-->
+<!--                  <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span>-->
+<!--                  <span class="text-nowrap">Since last week</span>-->
+<!--                </p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-xl-3 col-lg-6">-->
+<!--            <div class="card card-stats mb-4 mb-xl-0">-->
+<!--              <div class="card-body">-->
+<!--                <div class="row">-->
+<!--                  <div class="col">-->
+<!--                    <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>-->
+<!--                    <span class="h2 font-weight-bold mb-0">924</span>-->
+<!--                  </div>-->
+<!--                  <div class="col-auto">-->
+<!--                    <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">-->
+<!--                      <i class="fas fa-users"></i>-->
+<!--                    </div>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--                <p class="mt-3 mb-0 text-muted text-sm">-->
+<!--                  <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>-->
+<!--                  <span class="text-nowrap">Since yesterday</span>-->
+<!--                </p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="col-xl-3 col-lg-6">-->
+<!--            <div class="card card-stats mb-4 mb-xl-0">-->
+<!--              <div class="card-body">-->
+<!--                <div class="row">-->
+<!--                  <div class="col">-->
+<!--                    <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>-->
+<!--                    <span class="h2 font-weight-bold mb-0">49,65%</span>-->
+<!--                  </div>-->
+<!--                  <div class="col-auto">-->
+<!--                    <div class="icon icon-shape bg-info text-white rounded-circle shadow">-->
+<!--                      <i class="fas fa-percent"></i>-->
+<!--                    </div>-->
+<!--                  </div>-->
+<!--                </div>-->
+<!--                <p class="mt-3 mb-0 text-muted text-sm">-->
+<!--                  <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>-->
+<!--                  <span class="text-nowrap">Since last month</span>-->
+<!--                </p>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--        </div>-->
       </div>
     </div>
   </div>
@@ -310,11 +316,10 @@
       <div class="col">
         <div class="card shadow">
           <div class="card-header border-0">
-            <h3 class="mb-0">Students</h3>
           </div>
           <div class="table-responsive">
             <table class="table align-items-center table-flush">
-              <thead class="thead-light">
+              <thead class="thead-dark">
               <tr>
                 <th scope="col">Name</th>
                 <th scope="col">Subject</th>
@@ -381,7 +386,7 @@
                   <!--                      <a class="dropdown-item" href="#">Something else here</a>-->
                   <!--                    </div>-->
                   <!--                  </div>-->
-                  <button type="button" class="btn btn-success" data-toggle="modal" data-target="#modal-profile">View Profile</button>
+                  <button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#modal-profile">View Profile</button>
 
                 </td>
               </tr>
