added home caorusel

--- a/dexam/src/app/views/landing/components/mega-menu/mega-menu.component.html
+++ b/dexam/src/app/views/landing/components/mega-menu/mega-menu.component.html
@@ -345,16 +345,16 @@
     <!-- Links -->
 
 
-    <form class="form-inline waves-light" mdbWavesEffect>
-      <div class="md-form mt-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      </div>
-    </form>
+<!--    <form class="form-inline waves-light" mdbWavesEffect>-->
+<!--      <div class="md-form mt-0">-->
+<!--        <input class="form-control mr-sm-2" type="text" placeholder="Search">-->
+<!--      </div>-->
+<!--    </form>-->
   </links>
   <!-- Collapsible content -->
 
 </mdb-navbar>
 <!--  <app-callusbox></app-callusbox>-->
-  <div class="top-bar1"> call us now</div>
+  <div class="top-bar1">Call now to set up tutoring: (702) 508-9192</div>
 </div>
 
