--- a/dexam/src/app/views/landing/components/mega-menu/mega-menu.component.scss
+++ b/dexam/src/app/views/landing/components/mega-menu/mega-menu.component.scss
@@ -121,8 +121,10 @@
   margin-left: calc(-50vw + 50%);
   max-width: 100vw;
   height: 3.75rem;
-  background: #901a1a;
+  background: #ffffff;
   text-align: center;
+  color: #e91100;
+  line-height: 3.75rem;
 
 }
 .site-header__inner {
