--- a/dexam/src/app/views/landing/landing-v9/landing-v9.component.html
+++ b/dexam/src/app/views/landing/landing-v9/landing-v9.component.html
@@ -19,7 +19,10 @@
 <!--    <app-expandabletable></app-expandabletable>-->
 <!--    <app-sort-paginate-table></app-sort-paginate-table>-->
 <!--    <app-features></app-features>-->
-    <app-services></app-services>
+<!--    <app-services></app-services>-->
+    <app-carousel></app-carousel>
+    <app-contact-box></app-contact-box>
+<!--    <app-contact-box2></app-contact-box2>-->
     <app-works-carousel></app-works-carousel>
     <app-best></app-best>
     <app-left-image></app-left-image>
