working on form

--- a/dexam/src/app/views/landing/components/contact-box/contact-box.component.html
+++ b/dexam/src/app/views/landing/components/contact-box/contact-box.component.html
@@ -43,10 +43,10 @@
       </div>
 <!--    </div>-->
     <div class="row animated fadeIn" [hidden]="!(showStep2)" id="step2">
-      <div class="col-sm-12">
-        <h2 class="animated fadeInLeft text-primary">Hi, {{name}}<span ng-bind="name.first"></span> <span ng-bind="name.middle"></span> <span ng-bind="name.last"></span></h2>
-<!--        <h3>Where do you live?</h3>-->
-      </div>
+<!--      <div class="col-sm-12">-->
+<!--        <h2 class="animated fadeInLeft text-primary">Hi, {{name}}<span ng-bind="name.first"></span> <span ng-bind="name.middle"></span> <span ng-bind="name.last"></span></h2>-->
+<!--&lt;!&ndash;        <h3>Where do you live?</h3>&ndash;&gt;-->
+<!--      </div>-->
       <div class="col-sm-4">
         <label>Email</label>
         <input type="text" class="form-control" [(ngModel)]="email"/>
