--- a/dexam/src/app/views/landing/components/contact-box/contact-box.component.scss
+++ b/dexam/src/app/views/landing/components/contact-box/contact-box.component.scss
@@ -1,7 +1,7 @@
 .bg-grey {
   background-color: #eee;
 }
-.center-box { text-align:center; }
+.center-box { text-align:center; padding-top: 1%;}
 .auto-margin{
   margin-left: 10%;
   //margin-right: 10%;
