--- a/dexam/src/app/shared/components/layouts/auth-layout/auth-layout.component.html
+++ b/dexam/src/app/shared/components/layouts/auth-layout/auth-layout.component.html
@@ -1,4 +1,4 @@
-<div class="auth-layout-wrap" style="background-image: url(./assets/images/landing/Bg/bg2.jpg)">
+<div class="auth-layout-wrap" >
     <div class="auth-content">
         <router-outlet></router-outlet>
     </div>
