--- a/dexam/src/app/views/landing/components/schedule-form/schedule-form.component.html
+++ b/dexam/src/app/views/landing/components/schedule-form/schedule-form.component.html
@@ -1,47 +1,54 @@
-<div class="card-header border-0">
-<form (ngSubmit)="onSubmit()">
+<!--<div class="card-header">-->
+<form  (ngSubmit)="onSubmit()">
   <div class="row">
-  <div class="col-md-2">
-    <div class="form-group">
-      <igx-select [(ngModel)]="model.student" name="student">
-        <label igxLabel>Select Student</label>
-        <igx-select-item *ngFor="let item of myStudents" [value]="item.id">
-          {{item.first_name + ' ' + item.last_name}}
-        </igx-select-item>
-      </igx-select>
+    <div class="col-md-6">
+      <mdb-select [options]="optionsSelect" placeholder="Choose your option"></mdb-select>
     </div>
   </div>
-  <div class="col-md-2">
-    <div class="form-group">
-      <igx-select [(ngModel)]="model.subject" name="subject">
-        <label igxLabel>Select Subject</label>
-        <igx-select-item *ngFor="let item of optionsSelect" [value]="item.id">
-          {{item.name}}
-        </igx-select-item>
-      </igx-select>
-    </div>
+<!--  <div class="row">-->
+<!--  <div class="col-md-2">-->
+<!--    <div class="form-group">-->
+<!--&lt;!&ndash;      <igx-select [(ngModel)]="model.student" name="student">&ndash;&gt;-->
+<!--&lt;!&ndash;        <label igxLabel>Select Student</label>&ndash;&gt;-->
+<!--&lt;!&ndash;        <igx-select-item *ngFor="let item of myStudents" [value]="item.id">&ndash;&gt;-->
+<!--&lt;!&ndash;          {{item.first_name + ' ' + item.last_name}}&ndash;&gt;-->
+<!--&lt;!&ndash;        </igx-select-item>&ndash;&gt;-->
+<!--&lt;!&ndash;      </igx-select>&ndash;&gt;-->
+<!--&lt;!&ndash;      <div class="row">&ndash;&gt;-->
+<!--&lt;!&ndash;        <div class="col-md-6">&ndash;&gt;-->
+<!--          <mdb-select [options]="optionsSelect" placeholder="Choose your option"></mdb-select>-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;      </div>&ndash;&gt;-->
+<!--    </div>-->
+<!--  </div>-->
+<!--    <div class="form-col">-->
+      <mdb-select [filterEnabled]="true" [options]="optionsTutors" placeholder="Select Tutor"></mdb-select>
+<!--    </div>-->
+<!--    <div class="form-col">-->
+      <mdb-select [filterEnabled]="true" [options]="optionsSubjects" placeholder="Select Subject"></mdb-select>
+<!--    </div>-->
+  <div class="form-col">
+    <mdb-date-picker [inline]="true" name="mydate" [options]="myDatePickerOptions" [placeholder]="'Selected date'" [(ngModel)]="model" required></mdb-date-picker>
   </div>
-  <div class="col-md-2">
-    <div class="form-group">
-    <igx-date-picker id="editable-date-picker" #editable mode="dropdown" format="longDate" mask="DD-MM-YY"
-                     [(ngModel)]="model.date" name="date">
-    </igx-date-picker>
-    </div>
+  <div class="form-col">
+<!--    <div class="md-form">-->
+      <input
+              type="time"
+              id="input"
+              class="form-control"
+              value="13:00"
+              mdbInput
+      />
+<!--    </div>-->
   </div>
-  <div class="col-md-2">
-    <div class="form-group">
-      <igx-time-picker id="time-picker" #timePicker [(ngModel)]="model.time" [mode]="mode" [format]="format" name="time">
-      </igx-time-picker>
-    </div>
-  </div>
-  <div class="col-md-2">
-    <div class="form-group">
-    <button type="submit" class="btn btn_control btn-success"> <!--data-toggle="modal" data-target="#appointment-form-modal"> -->
+  <div class="form-col">
+
+    <button type="submit" > <!--data-toggle="modal" data-target="#appointment-form-modal"> -->
       Request appointment <i class="ni ni-fat-add"></i>
     </button>
-    </div>
+
   </div>
-  </div>
+<!--  </div>-->
 </form>
   <mat-spinner class="loading-indicator" *ngIf="showSpinner"></mat-spinner>
-</div>
+<!--</div>-->
