--- a/dexam/src/app/views/landing/components/schedule-form/schedule-form.component.scss
+++ b/dexam/src/app/views/landing/components/schedule-form/schedule-form.component.scss
@@ -34,3 +34,80 @@
   //background-color: rgba(0,0,0,0.3);
 }
 
+.card-header {
+  padding: 1.25rem 1.5rem;
+  margin-bottom: 0;
+  background-color: #ffffff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+}
+.btn {
+  /* box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); */
+  /* padding: 0.84rem 2.14rem; */
+  font-size: 0.81rem;
+  /* transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; */
+  margin: 0.375rem;
+  /* border: 0; */
+  border-radius: 0.125rem;
+  cursor: pointer;
+  text-transform: uppercase;
+  white-space: nowrap !important;
+
+  /* word-wrap: break-word; */
+  /* color: inherit; */
+}
+
+.form-inline {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+}
+
+.form-inline label {
+  margin: 5px 10px 5px 0;
+}
+
+.form-inline input {
+  vertical-align: middle;
+  margin: 5px 10px 5px 0;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+}
+//.form-inline mdb-select {
+//  vertical-align: middle;
+//  margin: 5px 10px 5px 0;
+//  padding: 10px;
+//  background-color: #fff;
+//  border: 1px solid #ddd;
+//}
+.form-inline .form-col {
+  vertical-align: middle;
+  margin: 5px 20px 5px 0;
+  padding: 10px;
+  //background-color: #fff;
+  //border: 1px solid #ddd;
+  //width: 100%;
+}
+
+.form-inline button {
+  padding: 10px 20px;
+  background-color: dodgerblue;
+  border: 1px solid #ddd;
+  color: white;
+  cursor: pointer;
+}
+
+.form-inline button:hover {
+  background-color: royalblue;
+}
+
+@media (max-width: 800px) {
+  .form-inline input {
+    margin: 10px 0;
+  }
+
+  .form-inline {
+    flex-direction: column;
+    align-items: stretch;
+  }
+}
