--- a/dexam/src/app/views/landing/components/team/team.component.html
+++ b/dexam/src/app/views/landing/components/team/team.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12  section-header mb-5">
-                <h2 class="font-weight-bold">Meet our Team</h2>
+                <h2 class="font-weight-bold">Top Tutors last month</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat ea quam laborum, ducimus, laboriosam sint dolorum aspernatur libero.</p>
 
             </div>
@@ -14,21 +14,32 @@
                         <div class="avatar box-shadow-2 mb-3">
                             <img src="./assets/images/landing/faces/15.jpg" alt="">
                         </div>
-                        <h5 class="font-weight-medium card-title m-0">Jhon Doe</h5>
-                        <p class="mt-0">UI/UX Designer</p>
+                        <h5 class="font-weight-medium card-title m-0">John Clayton</h5>
+                        <p class="mt-0">Math Tutor</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <button class="btn btn-gradient">Contact Jhon</button>
+                        <button class="btn btn-gradient">Contact John</button>
                         <div class="card-socials-simple mt-4">
 
-                            <a href="" class="text-20 mr-2">
-                                <i class="eva eva-twitter twitter"></i>
-                            </a>
-                            <a href="" class="text-20 mr-2">
-                                <i class="eva eva-google google"></i>
-                            </a>
-                            <a href="" class="text-20 mr-2">
-                                <i class="eva eva-facebook facebook"></i>
-                            </a>
+<!--                            <a href="" class="text-20 mr-2">-->
+<!--                                <i class="eva eva-twitter twitter"></i>-->
+<!--                            </a>-->
+<!--                            <a href="" class="text-20 mr-2">-->
+<!--                                <i class="eva eva-google google"></i>-->
+<!--                            </a>-->
+<!--                            <a href="" class="text-20 mr-2">-->
+<!--                                <i class="eva eva-facebook facebook"></i>-->
+<!--                            </a>-->
+<!--                            <div class="rating-container">-->
+
+                                            <span class="filled-stars" style="width: 100%;">
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                            </span>
+
+<!--                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -40,21 +51,32 @@
                         <div class="avatar box-shadow-2 mb-3">
                             <img src="./assets/images/landing/faces/12.jpg" alt="">
                         </div>
-                        <h5 class="font-weight-medium card-title m-0">Jassica Pearl</h5>
-                        <p class="mt-0">QA Tester</p>
+                        <h5 class="font-weight-medium card-title m-0">Jessica Pearl</h5>
+                        <p class="mt-0">English Tutor</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                        <button class="btn btn-gradient">Contact Jassica</button>
+                        <button class="btn btn-gradient">Contact Jessica</button>
                         <div class="card-socials-simple mt-4">
 
-                            <a href="" class="text-20 mr-2">
-                                <i class="eva eva-twitter twitter"></i>
-                            </a>
-                            <a href="" class="text-20 mr-2">
-                                <i class="eva eva-google google"></i>
-                            </a>
-                            <a href="" class="text-20 mr-2">
-                                <i class="eva eva-facebook facebook"></i>
-                            </a>
+                            <!--                            <a href="" class="text-20 mr-2">-->
+                            <!--                                <i class="eva eva-twitter twitter"></i>-->
+                            <!--                            </a>-->
+                            <!--                            <a href="" class="text-20 mr-2">-->
+                            <!--                                <i class="eva eva-google google"></i>-->
+                            <!--                            </a>-->
+                            <!--                            <a href="" class="text-20 mr-2">-->
+                            <!--                                <i class="eva eva-facebook facebook"></i>-->
+                            <!--                            </a>-->
+                            <!--                            <div class="rating-container">-->
+
+                            <span class="filled-stars" style="width: 100%;">
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                            </span>
+
+                            <!--                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -66,21 +88,32 @@
                         <div class="avatar box-shadow-2 mb-3">
                             <img src="./assets/images/landing/faces/16.jpg" alt="">
                         </div>
-                        <h5 class="font-weight-medium card-title m-0">Kara Smith</h5>
-                        <p class="mt-0">Backend Developer</p>
+                        <h5 class="font-weight-medium card-title m-0">Isabella Hernandez</h5>
+                        <p class="mt-0">Spanish Tutor</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <button class="btn btn-gradient">Contact Kara</button>
                         <div class="card-socials-simple mt-4">
 
-                            <a href="" class="text-20 mr-2">
-                                <i class="eva eva-twitter twitter"></i>
-                            </a>
-                            <a href="" class="text-20 mr-2">
-                                <i class="eva eva-google google"></i>
-                            </a>
-                            <a href="" class="text-20 mr-2">
-                                <i class="eva eva-facebook facebook"></i>
-                            </a>
+                            <!--                            <a href="" class="text-20 mr-2">-->
+                            <!--                                <i class="eva eva-twitter twitter"></i>-->
+                            <!--                            </a>-->
+                            <!--                            <a href="" class="text-20 mr-2">-->
+                            <!--                                <i class="eva eva-google google"></i>-->
+                            <!--                            </a>-->
+                            <!--                            <a href="" class="text-20 mr-2">-->
+                            <!--                                <i class="eva eva-facebook facebook"></i>-->
+                            <!--                            </a>-->
+                            <!--                            <div class="rating-container">-->
+
+                            <span class="filled-stars" style="width: 100%;">
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                            </span>
+
+                            <!--                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -94,20 +127,31 @@
                             <img src="./assets/images/landing/faces/5.jpg" alt="">
                         </div>
                         <h5 class="font-weight-medium card-title m-0">Mike Danvers</h5>
-                        <p class="mt-0">Frontend Developer</p>
+                        <p class="mt-0">Math Tutor</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <button class="btn btn-gradient">Contact Mike</button>
                         <div class="card-socials-simple mt-4">
 
-                            <a href="" class="text-20 mr-2">
-                                <i class="eva eva-twitter twitter"></i>
-                            </a>
-                            <a href="" class="text-20 mr-2">
-                                <i class="eva eva-google google"></i>
-                            </a>
-                            <a href="" class="text-20 mr-2">
-                                <i class="eva eva-facebook facebook"></i>
-                            </a>
+                            <!--                            <a href="" class="text-20 mr-2">-->
+                            <!--                                <i class="eva eva-twitter twitter"></i>-->
+                            <!--                            </a>-->
+                            <!--                            <a href="" class="text-20 mr-2">-->
+                            <!--                                <i class="eva eva-google google"></i>-->
+                            <!--                            </a>-->
+                            <!--                            <a href="" class="text-20 mr-2">-->
+                            <!--                                <i class="eva eva-facebook facebook"></i>-->
+                            <!--                            </a>-->
+                            <!--                            <div class="rating-container">-->
+
+                            <span class="filled-stars" style="width: 100%;">
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                                <span class="star"><i class="fa fa-star star-yellow"></i></span>
+                                            </span>
+
+                            <!--                            </div>-->
                         </div>
                     </div>
                 </div>
